security: migrate API keys to env vars, remove firebase-config.js from git
- Added build-config.js to generate firebase-config.js from .env
- Added .env.example with placeholders
- Updated .gitignore to exclude .env and generated config
- firebase-config.js is now auto-generated, not committed

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ node_modules/
 src/
 package-lock.json
 *.zip
+
+# Environment variables (API keys — NEVER commit!)
+.env
+.env.local
+.env.production
+
+# Auto-generated from .env by build-config.js
+js/firebase-config.js
